--- a/Task 04/Task 04.ipynb
+++ b/Task 04/Task 04.ipynb
@@ -115,7 +115,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 46,
    "id": "cf7acee3-633c-4b27-b3f5-f1a91b84ccf0",
    "metadata": {},
    "outputs": [
@@ -124,15 +124,15 @@
      "output_type": "stream",
      "text": [
       "Enter the Value:  90\n",
-      "Enter the current Unit:  metesrs\n",
-      "Enter the desire Unit:  neres\n"
+      "Enter the current Unit:  meters\n",
+      "Enter the desire Unit:  feet\n"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Invalid Conversion\n"
+      "295.2756\n"
      ]
     }
    ],
@@ -184,6 +184,14 @@
     "result = conversions.get(conv, \"not known\")\n",
     "print(result if conv in conversions else \"Invalid Conversion\")"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "0477bbc4-714c-42bd-9778-347a0e0c5a35",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
