Praticle application for task 10 to 13 added

--- a/Task 10/Task 10.ipynb
+++ b/Task 10/Task 10.ipynb
@@ -2,23 +2,41 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "16dcdcd3-190d-453d-b28b-8c3c1a49873e",
+   "id": "583922f5-a520-418b-a015-f4891255643e",
    "metadata": {},
    "source": [
-    "## Numpy"
+    "# NumPy Tasks\r\n",
+    "## Introduction\r\n",
+    "\r\n",
+    "This project demonstrates proficiency in using NumPy for various array operations and statistical calculations. The tasks cover:\r\n",
+    "\r\n",
+    "* Creating arrays of different dimensions\r\n",
+    "* Performing element-wise operations\r\n",
+    "* Calculating dot product, mean, median, standard deviation, and correlation coefficient\r\n",
+    "* Generating random numbers from normal and uniform distributions\r\n",
+    "* Simulating a random process (rolliusing NumPy library."
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "583922f5-a520-418b-a015-f4891255643e",
+   "id": "6fa627ab-a641-4aa9-aec8-4a9f14b20495",
    "metadata": {},
    "source": [
-    "### Importing Libraries"
+    "Why Numpy?\n",
+    "Numpy aims to provide an array object that is up to 50x faster than traditional python lists. The array object array in Numpy is called ndarray, it provides a lot of supporting functions that make working with ndarray very easy.\n",
+    "\n",
+    "Why is NumPy Faster Than Lists?\r\n",
+    "NumPy arrays are stored at one continuous place in memory unlike lists, so processes can access and manipulate them very efficiently\r\n",
+    "\r\n",
+    "This behavior is called locality of reference in computer scien\n",
+    "\n",
+    "Which Language is NumPy written in?\r\n",
+    "NumPy is a Python library and is written partially in Python, but most of the parts that require fast computation are written in C or C++.ce."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 198,
+   "execution_count": 2,
    "id": "185291a5-d5c2-499e-ad99-57f999e5f569",
    "metadata": {},
    "outputs": [],
@@ -810,239 +828,166 @@
   },
   {
    "cell_type": "markdown",
-   "id": "be25bd08-bc9a-4eb7-9a4b-2409c2209fdf",
+   "id": "bbd76de0-9832-4f84-a2eb-d16f7f05d563",
    "metadata": {},
    "source": [
-    "# EXTRA WORK"
+    "# Practicle Application Using Numpy"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "6fa627ab-a641-4aa9-aec8-4a9f14b20495",
+   "id": "7c6e540c-cc49-4f9f-94ab-4e94c6a53dde",
    "metadata": {},
    "source": [
-    "Why Numpy?\n",
-    "Numpy aims to provide an array object that is up to 50x faster than traditional python lists. The array object array in Numpy is called ndarray, it provides a lot of supporting functions that make working with ndarray very easy.\n",
+    "# Matrix Calculator\n",
+    "## Introduction\n",
     "\n",
-    "Why is NumPy Faster Than Lists?\r\n",
-    "NumPy arrays are stored at one continuous place in memory unlike lists, so processes can access and manipulate them very efficiently\r\n",
-    "\r\n",
-    "This behavior is called locality of reference in computer scien\n",
+    "The Matrix Calculator is a powerful tool for performing arithmetic operations on matrices. With this application, you can easily add, subtract, and multiply matrices of various sizes. Whether you're a student, teacher, or professional, this calculator is designed to make matrix calculations simple and efficient.\n",
     "\n",
-    "Which Language is NumPy written in?\r\n",
-    "NumPy is a Python library and is written partially in Python, but most of the parts that require fast computation are written in C or C++.ce."
+    "### Features\n",
+    "\n",
+    "* Supports addition, subtraction, and multiplication of matrices\n",
+    "* Allows input of matrices of different sizes\n",
+    "* Performs calculations using numpy library for accuracy and speed\n",
+    "* User-friendly interface for easy operation\n",
+    "\n",
+    "### Getting Started\n",
+    "\n",
+    "To use the Matrix Calculator, simply follow these steps:\n",
+    "\n",
+    "1. Choose the operation you want to perform\n",
+    "2. Enter the size of the matrices\n",
+    "3. Input the elements of the matrices\n",
+    "4. Click \"Calculate\" to see the result"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
-   "id": "74cbd055-9503-491d-850b-b01478f0fdf6",
+   "execution_count": 7,
+   "id": "c6d89d58-fdda-4d27-8a31-d33329cb63d5",
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "array([1, 1, 2, 2])"
-      ]
-     },
-     "execution_count": 2,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 5,
-   "id": "3ebe088e-a58e-42d5-8266-68e1d7f4588f",
-   "metadata": {},
-   "outputs": [
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Matrix Calculator\n",
+      "1. Addition\n",
+      "2. Subtraction\n",
+      "3. Multiplication\n"
+     ]
+    },
     {
-     "data": {
-      "text/plain": [
-       "numpy.ndarray"
-      ]
-     },
-     "execution_count": 5,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "type(arr)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "aae54380-bb0c-4ec1-a189-b3414964832b",
-   "metadata": {},
-   "source": [
-    "# 0-D Array"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 11,
-   "id": "1a4a9efe-171e-46fd-aaee-b0a172791ae1",
-   "metadata": {},
-   "outputs": [
+     "name": "stdin",
+     "output_type": "stream",
+     "text": [
+      "Enter your choice (1/2/3):  1\n",
+      "Enter number of rows for matrix 1:  2\n",
+      "Enter number of columns for matrix 1:  2\n"
+     ]
+    },
     {
-     "data": {
-      "text/plain": [
-       "array(23)"
-      ]
-     },
-     "execution_count": 11,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "zero_d_arr = np.array(23)\n",
-    "zero_d_arr"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 18,
-   "id": "f2d78556-f2cc-41b9-ba73-3b80da01f29c",
-   "metadata": {},
-   "outputs": [
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Enter elements of matrix 1:\n"
+     ]
+    },
     {
-     "data": {
-      "text/plain": [
-       "array([1, 1, 2, 2])"
-      ]
-     },
-     "execution_count": 18,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "one_d_arr = np.array([1,1,2,2])\n",
-    "one_d_arr"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 17,
-   "id": "30f2dedd-2caf-45d7-ac84-a23447b367ea",
-   "metadata": {},
-   "outputs": [
+     "name": "stdin",
+     "output_type": "stream",
+     "text": [
+      "Element (0,0):  1\n",
+      "Element (0,1):  2\n",
+      "Element (1,0):  3\n",
+      "Element (1,1):  4\n",
+      "Enter number of rows for matrix 2:  2\n",
+      "Enter number of columns for matrix 2:  2\n"
+     ]
+    },
     {
-     "data": {
-      "text/plain": [
-       "array([[1, 1, 2, 2],\n",
-       "       [2, 2, 2, 1]])"
-      ]
-     },
-     "execution_count": 17,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "two_d_arr = np.array([[1,1,2,2], [2,2,2,1]])\n",
-    "two_d_arr"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 16,
-   "id": "7abd4f1f-4897-48fc-8d92-068cfbb59edf",
-   "metadata": {},
-   "outputs": [
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Enter elements of matrix 2:\n"
+     ]
+    },
     {
-     "data": {
-      "text/plain": [
-       "array([[[1, 1, 2, 2],\n",
-       "        [2, 2, 2, 1],\n",
-       "        [3, 3, 2, 1]]])"
-      ]
-     },
-     "execution_count": 16,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "three_d_arr = np.array([[[1,1,2,2], [2,2,2,1], [3,3,2,1]]])\n",
-    "three_d_arr"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 23,
-   "id": "13c31cce-e4d9-4e14-9ff2-b754d5181c20",
-   "metadata": {},
-   "outputs": [
+     "name": "stdin",
+     "output_type": "stream",
+     "text": [
+      "Element (0,0):  1\n",
+      "Element (0,1):  2\n",
+      "Element (1,0):  3\n",
+      "Element (1,1):  4\n"
+     ]
+    },
     {
-     "data": {
-      "text/plain": [
-       "0"
-      ]
-     },
-     "execution_count": 23,
-     "metadata": {},
-     "output_type": "execute_result"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Result:\n",
+      "[[2. 4.]\n",
+      " [6. 8.]]\n"
+     ]
     }
    ],
    "source": [
-    "zero_d_arr.ndim"
+    "import numpy as np\n",
+    "\n",
+    "def matrix_calculator():\n",
+    "    print(\"Matrix Calculator\")\n",
+    "    print(\"1. Addition\")\n",
+    "    print(\"2. Subtraction\")\n",
+    "    print(\"3. Multiplication\")\n",
+    "    \n",
+    "    choice = int(input(\"Enter your choice (1/2/3): \"))\n",
+    "    \n",
+    "    # Take input for matrix 1\n",
+    "    rows1 = int(input(\"Enter number of rows for matrix 1: \"))\n",
+    "    cols1 = int(input(\"Enter number of columns for matrix 1: \"))\n",
+    "    matrix1 = np.zeros((rows1, cols1))\n",
+    "    print(\"Enter elements of matrix 1:\")\n",
+    "    for i in range(rows1):\n",
+    "        for j in range(cols1):\n",
+    "            matrix1[i][j] = float(input(f\"Element ({i},{j}): \"))\n",
+    "    \n",
+    "    # Take input for matrix 2\n",
+    "    rows2 = int(input(\"Enter number of rows for matrix 2: \"))\n",
+    "    cols2 = int(input(\"Enter number of columns for matrix 2: \"))\n",
+    "    matrix2 = np.zeros((rows2, cols2))\n",
+    "    print(\"Enter elements of matrix 2:\")\n",
+    "    for i in range(rows2):\n",
+    "        for j in range(cols2):\n",
+    "            matrix2[i][j] = float(input(f\"Element ({i},{j}): \"))\n",
+    "    \n",
+    "    # Perform operation\n",
+    "    if choice == 1:\n",
+    "        if rows1 != rows2 or cols1 != cols2:\n",
+    "            print(\"Addition not possible. Matrices must be of same size.\")\n",
+    "        else:\n",
+    "            result = np.add(matrix1, matrix2)\n",
+    "            print(\"Result:\")\n",
+    "            print(result)\n",
+    "    elif choice == 2:\n",
+    "        if rows1 != rows2 or cols1 != cols2:\n",
+    "            print(\"Subtraction not possible. Matrices must be of same size.\")\n",
+    "        else:\n",
+    "            result = np.subtract(matrix1, matrix2)\n",
+    "            print(\"Result:\")\n",
+    "            print(result)\n",
+    "    elif choice == 3:\n",
+    "        if cols1 != rows2:\n",
+    "            print(\"Multiplication not possible. Number of columns in matrix 1 must be equal to number of rows in matrix 2.\")\n",
+    "        else:\n",
+    "            result = np.matmul(matrix1, matrix2)\n",
+    "            print(\"Result:\")\n",
+    "            print(result)\n",
+    "    else:\n",
+    "        print(\"Invalid choice\")\n",
+    "\n",
+    "matrix_calculator()"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 27,
-   "id": "5e385aac-27ac-4dc3-8fa2-700fe6c39a0b",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "5"
-      ]
-     },
-     "execution_count": 27,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "arr = np.array([1,1,2,2], ndmin=5)\n",
-    "arr.ndim"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 32,
-   "id": "15209c36-1150-4783-a332-aa54a36875cd",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "array([], shape=(1, 1, 0), dtype=int32)"
-      ]
-     },
-     "execution_count": 32,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "random.randint(np.array([],ndmin=3))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "d39089fa-858f-4b50-8b4a-3f8f7faf4d6c",
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
