--- a/Task 12/Task 12.ipynb
+++ b/Task 12/Task 12.ipynb
@@ -2,15 +2,26 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "f428e78e-c5a2-4298-9893-e0eeae2154e3",
+   "id": "0d44b848-4f18-43d0-90ea-5af459a5d163",
    "metadata": {},
    "source": [
-    "## Introduction to Pandas (Series, DataFrame basics)\n"
+    "# Introduction to Pandas\n",
+    "## Basics of Series and DataFrames\n",
+    "\n",
+    "Completed tasks include:\n",
+    "\n",
+    "* Creating Pandas Series from various data structures\n",
+    "* Performing operations on Series and DataFrames\n",
+    "* Filtering and accessing data\n",
+    "* Creating DataFrames from different sources\n",
+    "* Data manipulation and analysis\n",
+    "\n",
+    "Demonstrates proficiency in using Pandas for data handling and analysis."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 171,
+   "execution_count": 9,
    "id": "0f75cca4-8132-4e5a-9c67-7a5d8a1e394e",
    "metadata": {},
    "outputs": [],
@@ -29,7 +40,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 172,
+   "execution_count": 10,
    "id": "7c5a4d45-83f9-4256-bac2-b656e68820e8",
    "metadata": {},
    "outputs": [
@@ -50,16 +61,16 @@
       "9    9\n",
       "dtype: int64\n",
       "Series from Numpy Array: \n",
-      " 0    4\n",
-      "1    7\n",
-      "2    8\n",
-      "3    2\n",
-      "4    2\n",
-      "5    3\n",
-      "6    8\n",
-      "7    8\n",
-      "8    3\n",
-      "9    6\n",
+      " 0    7\n",
+      "1    2\n",
+      "2    1\n",
+      "3    1\n",
+      "4    8\n",
+      "5    0\n",
+      "6    3\n",
+      "7    3\n",
+      "8    1\n",
+      "9    1\n",
       "dtype: int32\n",
       "Series from Dictionary: \n",
       " 0    0\n",
@@ -101,7 +112,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 173,
+   "execution_count": 11,
    "id": "b0d2c2e4-1653-45fa-850c-a4c3add12107",
    "metadata": {},
    "outputs": [
@@ -135,7 +146,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 174,
+   "execution_count": 12,
    "id": "b429b3c1-04f5-4885-9b1c-8878f8baf343",
    "metadata": {},
    "outputs": [
@@ -195,7 +206,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 175,
+   "execution_count": 13,
    "id": "7cd0a7f7-de86-4a31-851c-78063c863737",
    "metadata": {},
    "outputs": [
@@ -231,7 +242,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 176,
+   "execution_count": 14,
    "id": "ade6f928-9b36-4ef9-91af-777b74d49857",
    "metadata": {},
    "outputs": [
@@ -291,7 +302,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 177,
+   "execution_count": 15,
    "id": "a89b237c-6033-4054-a649-1ef4c23d7ed8",
    "metadata": {},
    "outputs": [
@@ -358,7 +369,7 @@
        "day3  cherry    spinach   blue"
       ]
      },
-     "execution_count": 177,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -386,7 +397,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 178,
+   "execution_count": 16,
    "id": "14096162-9d60-4551-9464-c63df07a249c",
    "metadata": {},
    "outputs": [
@@ -450,7 +461,7 @@
        "day4   2005"
       ]
      },
-     "execution_count": 178,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -474,7 +485,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 179,
+   "execution_count": 17,
    "id": "5946e814-ad49-4c80-b3a1-70cec1d1065d",
    "metadata": {},
    "outputs": [
@@ -685,7 +696,7 @@
        "[768 rows x 9 columns]"
       ]
      },
-     "execution_count": 179,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -707,7 +718,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 180,
+   "execution_count": 18,
    "id": "1e827980-cc5e-461d-81fa-359a3687758b",
    "metadata": {},
    "outputs": [
@@ -831,7 +842,7 @@
        "4                     2.288   33        1  "
       ]
      },
-     "execution_count": 180,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -845,7 +856,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 181,
+   "execution_count": 19,
    "id": "3a5b7716-06dc-4498-b281-4466da30f22c",
    "metadata": {},
    "outputs": [
@@ -969,7 +980,7 @@
        "767                     0.315   23        0  "
       ]
      },
-     "execution_count": 181,
+     "execution_count": 19,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -991,7 +1002,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 182,
+   "execution_count": 20,
    "id": "33a8842d-6a3f-4793-b54a-04964e52dc32",
    "metadata": {},
    "outputs": [
@@ -1157,7 +1168,7 @@
        "max     67.100000                  2.420000   81.000000    1.000000  "
       ]
      },
-     "execution_count": 182,
+     "execution_count": 20,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1178,7 +1189,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 183,
+   "execution_count": 21,
    "id": "7417481b-7a17-4190-aa7f-c2e1ae1961e1",
    "metadata": {},
    "outputs": [
@@ -1221,7 +1232,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 184,
+   "execution_count": 22,
    "id": "cf70d83e-acf8-4ac2-b5a3-49e0dc5f7ad2",
    "metadata": {},
    "outputs": [
@@ -1387,7 +1398,7 @@
        "673                     0.880   22        0  "
       ]
      },
-     "execution_count": 184,
+     "execution_count": 22,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1409,7 +1420,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 185,
+   "execution_count": 23,
    "id": "9e588d0a-510d-4994-a2dd-b402d01e449f",
    "metadata": {},
    "outputs": [
@@ -1645,7 +1656,7 @@
        "695                     0.128   43        1  "
       ]
      },
-     "execution_count": 185,
+     "execution_count": 23,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1667,7 +1678,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 186,
+   "execution_count": 24,
    "id": "29e4548f-ec35-4628-8703-01e81ee7cf21",
    "metadata": {},
    "outputs": [
@@ -1890,7 +1901,7 @@
        "[768 rows x 10 columns]"
       ]
      },
-     "execution_count": 186,
+     "execution_count": 24,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1916,7 +1927,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 187,
+   "execution_count": 25,
    "id": "ec814903-ea74-473c-9d69-b1c87a4daa41",
    "metadata": {},
    "outputs": [
@@ -2127,7 +2138,7 @@
        "[768 rows x 9 columns]"
       ]
      },
-     "execution_count": 187,
+     "execution_count": 25,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2150,7 +2161,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 188,
+   "execution_count": 26,
    "id": "38b58102-3698-479e-a420-ce978973bded",
    "metadata": {},
    "outputs": [
@@ -2361,7 +2372,7 @@
        "[768 rows x 9 columns]"
       ]
      },
-     "execution_count": 188,
+     "execution_count": 26,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2371,6 +2382,228 @@
     "# Renaming the Columnn in df\n",
     "print(\"'Age' Column name is renamed to 'Years'\")\n",
     "df.rename(columns = {'Age': 'Years'})"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "8cd043d7-d775-4932-b0eb-292fbfe555a6",
+   "metadata": {},
+   "source": [
+    "# Student Database Application\n",
+    "## Introduction\n",
+    "\n",
+    "This application is a student database management system that utilizes the Pandas library to perform various tasks. The application allows users to:\n",
+    "\n",
+    "* Load student data from a dictionary\n",
+    "* Calculate the average grade of each student\n",
+    "* Filter students with an average grade greater than 80\n",
+    "* Add new students to the database\n",
+    "* Delete students from the database\n",
+    "* Update student information\n",
+    "* Generate a report of student names and average grades\n",
+    "\n",
+    "This application demonstrates the use of Pandas for data manipulation and analysis in a real-world scenario."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 27,
+   "id": "9451883d-60e9-4be2-8190-05974562c1dd",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Name</th>\n",
+       "      <th>Grade1</th>\n",
+       "      <th>Grade2</th>\n",
+       "      <th>Grade3</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>John</td>\n",
+       "      <td>85</td>\n",
+       "      <td>90</td>\n",
+       "      <td>92</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>Mary</td>\n",
+       "      <td>90</td>\n",
+       "      <td>85</td>\n",
+       "      <td>88</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>David</td>\n",
+       "      <td>80</td>\n",
+       "      <td>95</td>\n",
+       "      <td>90</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>Emily</td>\n",
+       "      <td>95</td>\n",
+       "      <td>90</td>\n",
+       "      <td>92</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>Sarah</td>\n",
+       "      <td>88</td>\n",
+       "      <td>92</td>\n",
+       "      <td>89</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "    Name  Grade1  Grade2  Grade3\n",
+       "0   John      85      90      92\n",
+       "1   Mary      90      85      88\n",
+       "2  David      80      95      90\n",
+       "3  Emily      95      90      92\n",
+       "4  Sarah      88      92      89"
+      ]
+     },
+     "execution_count": 27,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Create a dictionary to store the student data\n",
+    "student_data = {\n",
+    "    'Name': ['John', 'Mary', 'David', 'Emily', 'Sarah'],\n",
+    "    'Grade1': [85, 90, 80, 95, 88],\n",
+    "    'Grade2': [90, 85, 95, 90, 92],\n",
+    "    'Grade3': [92, 88, 90, 92, 89]\n",
+    "}\n",
+    "\n",
+    "# Create the DataFrame\n",
+    "df = pd.DataFrame(student_data)\n",
+    "df"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 28,
+   "id": "46295cbe-acc3-43bf-9991-01838f530984",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Name</th>\n",
+       "      <th>Average Grade</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>John</td>\n",
+       "      <td>89.000000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>Mary</td>\n",
+       "      <td>87.666667</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>Emily</td>\n",
+       "      <td>92.333333</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>Sarah</td>\n",
+       "      <td>89.666667</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5</th>\n",
+       "      <td>Michael</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "      Name  Average Grade\n",
+       "0     John      89.000000\n",
+       "1     Mary      87.666667\n",
+       "3    Emily      92.333333\n",
+       "4    Sarah      89.666667\n",
+       "5  Michael            NaN"
+      ]
+     },
+     "execution_count": 28,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Create the DataFrame\n",
+    "df = pd.DataFrame(student_data)\n",
+    "\n",
+    "# Calculate average grade of each student\n",
+    "df['Average Grade'] = (df['Grade1'] + df['Grade2'] + df['Grade3']) / 3\n",
+    "\n",
+    "# Filter students with average grade greater than 80\n",
+    "filtered_students = df[df['Average Grade'] > 80]\n",
+    "\n",
+    "# Add new student to database\n",
+    "new_student = pd.DataFrame({'Name': ['Michael'], 'Grade1': [90], 'Grade2': [92], 'Grade3': [88]})\n",
+    "df = pd.concat([df, new_student], ignore_index=True)\n",
+    "\n",
+    "# Delete student from database\n",
+    "df = df.drop(df[df['Name'] == 'David'].index)\n",
+    "\n",
+    "# Update student information\n",
+    "df.loc[df['Name'] == 'Mary', 'Grade1'] = 95\n",
+    "\n",
+    "# Generate report\n",
+    "report = df[['Name', 'Average Grade']]\n",
+    "report"
    ]
   }
  ],
