--- a/Task 13/Task 13.ipynb
+++ b/Task 13/Task 13.ipynb
@@ -2673,7 +2673,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 34,
    "id": "f45a12b1-f1d3-4117-87f1-b5f81461499d",
    "metadata": {},
    "outputs": [
@@ -2753,7 +2753,7 @@
        "4  2022-01-05    500  North  ProductA"
       ]
      },
-     "execution_count": 24,
+     "execution_count": 34,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2772,7 +2772,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 38,
    "id": "c2fd5d79-7bad-4a86-9ea6-86e0eec63581",
    "metadata": {},
    "outputs": [
@@ -2792,62 +2792,70 @@
       "2  2022-01-03    300   East  ProductA\n",
       "3  2022-01-04    400   West  ProductB\n",
       "4  2022-01-05    500  North  ProductA\n",
-      "Date\n",
+      "Sales: \n",
+      " Date\n",
       "2022-01-01    100\n",
       "2022-01-02    200\n",
       "2022-01-03    300\n",
       "2022-01-04    400\n",
       "2022-01-05    500\n",
       "Name: Sales, dtype: int64\n",
-      "            Sales Region\n",
+      "Sales with Ragion: \n",
+      "             Sales Region\n",
       "Date                    \n",
       "2022-01-01    100  North\n",
       "2022-01-02    200  South\n",
       "2022-01-03    300   East\n",
       "2022-01-04    400   West\n",
       "2022-01-05    500  North\n",
-      "Empty DataFrame\n",
+      "Filtering Sales: \n",
+      " Empty DataFrame\n",
       "Columns: [Sales, Region, Product]\n",
       "Index: []\n",
-      "            Sales Region\n",
+      "Subdf: \n",
+      "             Sales Region\n",
       "Date                    \n",
       "2022-01-01    100  North\n",
       "2022-01-02    200  South\n",
       "2022-01-03    300   East\n",
       "2022-01-04    400   West\n",
       "2022-01-05    500  North\n",
-      "Region\n",
+      "Groupby region: \n",
+      "  Region\n",
       "East     300.0\n",
       "North    300.0\n",
       "South    200.0\n",
       "West     400.0\n",
       "Name: Sales, dtype: float64\n",
-      "Region  Product \n",
+      "Region and Rroduct: \n",
+      " Region  Product \n",
       "East    ProductA    300\n",
       "North   ProductA    600\n",
       "South   ProductB    200\n",
       "West    ProductB    400\n",
       "Name: Sales, dtype: int64\n",
-      "        Sales     \n",
+      "Mean and sum of region: \n",
+      "         Sales     \n",
       "         mean  sum\n",
       "Region            \n",
       "East    300.0  300\n",
       "North   300.0  600\n",
       "South   200.0  200\n",
       "West    400.0  400\n",
-      "Region\n",
+      "Size of Region: \n",
+      " Region\n",
       "East     1\n",
       "North    2\n",
       "South    1\n",
       "West     1\n",
       "dtype: int64\n",
+      "FIltering Data: \n",
+      " {sales_data[(sales_data['Sales'] > 1000) & (sales_data['Region'] == 'North')]}\n",
       "Empty DataFrame\n",
       "Columns: [Sales, Region, Product]\n",
       "Index: []\n",
-      "Empty DataFrame\n",
-      "Columns: [Sales, Region, Product]\n",
-      "Index: []\n",
-      "            Sales Region   Product\n",
+      "Using isin: \n",
+      "             Sales Region   Product\n",
       "Date                              \n",
       "2022-01-01    100  North  ProductA\n",
       "2022-01-02    200  South  ProductB\n",
@@ -2862,20 +2870,6 @@
       "2022-01-04      400   West\n",
       "2022-01-05      500  North\n"
      ]
-    },
-    {
-     "ename": "KeyError",
-     "evalue": "\"['Revenue'] not in index\"",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mKeyError\u001b[0m                                  Traceback (most recent call last)",
-      "Cell \u001b[1;32mIn[25], line 45\u001b[0m\n\u001b[0;32m     42\u001b[0m \u001b[38;5;28mprint\u001b[39m(sales_data\u001b[38;5;241m.\u001b[39mrename(columns\u001b[38;5;241m=\u001b[39m{\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mSales\u001b[39m\u001b[38;5;124m'\u001b[39m: \u001b[38;5;124m'\u001b[39m\u001b[38;5;124mRevenue\u001b[39m\u001b[38;5;124m'\u001b[39m})[[\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mRevenue\u001b[39m\u001b[38;5;124m'\u001b[39m, \u001b[38;5;124m'\u001b[39m\u001b[38;5;124mRegion\u001b[39m\u001b[38;5;124m'\u001b[39m]])\n\u001b[0;32m     44\u001b[0m \u001b[38;5;66;03m# Rearrange columns to display data in more meaningful way\u001b[39;00m\n\u001b[1;32m---> 45\u001b[0m \u001b[38;5;28mprint\u001b[39m(sales_data[[\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mRegion\u001b[39m\u001b[38;5;124m'\u001b[39m, \u001b[38;5;124m'\u001b[39m\u001b[38;5;124mProduct\u001b[39m\u001b[38;5;124m'\u001b[39m, \u001b[38;5;124m'\u001b[39m\u001b[38;5;124mRevenue\u001b[39m\u001b[38;5;124m'\u001b[39m]])\n",
-      "File \u001b[1;32mC:\\ProgramData\\anaconda3\\Lib\\site-packages\\pandas\\core\\frame.py:3899\u001b[0m, in \u001b[0;36mDataFrame.__getitem__\u001b[1;34m(self, key)\u001b[0m\n\u001b[0;32m   3897\u001b[0m     \u001b[38;5;28;01mif\u001b[39;00m is_iterator(key):\n\u001b[0;32m   3898\u001b[0m         key \u001b[38;5;241m=\u001b[39m \u001b[38;5;28mlist\u001b[39m(key)\n\u001b[1;32m-> 3899\u001b[0m     indexer \u001b[38;5;241m=\u001b[39m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mcolumns\u001b[38;5;241m.\u001b[39m_get_indexer_strict(key, \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mcolumns\u001b[39m\u001b[38;5;124m\"\u001b[39m)[\u001b[38;5;241m1\u001b[39m]\n\u001b[0;32m   3901\u001b[0m \u001b[38;5;66;03m# take() does not accept boolean indexers\u001b[39;00m\n\u001b[0;32m   3902\u001b[0m \u001b[38;5;28;01mif\u001b[39;00m \u001b[38;5;28mgetattr\u001b[39m(indexer, \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mdtype\u001b[39m\u001b[38;5;124m\"\u001b[39m, \u001b[38;5;28;01mNone\u001b[39;00m) \u001b[38;5;241m==\u001b[39m \u001b[38;5;28mbool\u001b[39m:\n",
-      "File \u001b[1;32mC:\\ProgramData\\anaconda3\\Lib\\site-packages\\pandas\\core\\indexes\\base.py:6115\u001b[0m, in \u001b[0;36mIndex._get_indexer_strict\u001b[1;34m(self, key, axis_name)\u001b[0m\n\u001b[0;32m   6112\u001b[0m \u001b[38;5;28;01melse\u001b[39;00m:\n\u001b[0;32m   6113\u001b[0m     keyarr, indexer, new_indexer \u001b[38;5;241m=\u001b[39m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39m_reindex_non_unique(keyarr)\n\u001b[1;32m-> 6115\u001b[0m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39m_raise_if_missing(keyarr, indexer, axis_name)\n\u001b[0;32m   6117\u001b[0m keyarr \u001b[38;5;241m=\u001b[39m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mtake(indexer)\n\u001b[0;32m   6118\u001b[0m \u001b[38;5;28;01mif\u001b[39;00m \u001b[38;5;28misinstance\u001b[39m(key, Index):\n\u001b[0;32m   6119\u001b[0m     \u001b[38;5;66;03m# GH 42790 - Preserve name from an Index\u001b[39;00m\n",
-      "File \u001b[1;32mC:\\ProgramData\\anaconda3\\Lib\\site-packages\\pandas\\core\\indexes\\base.py:6179\u001b[0m, in \u001b[0;36mIndex._raise_if_missing\u001b[1;34m(self, key, indexer, axis_name)\u001b[0m\n\u001b[0;32m   6176\u001b[0m     \u001b[38;5;28;01mraise\u001b[39;00m \u001b[38;5;167;01mKeyError\u001b[39;00m(\u001b[38;5;124mf\u001b[39m\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mNone of [\u001b[39m\u001b[38;5;132;01m{\u001b[39;00mkey\u001b[38;5;132;01m}\u001b[39;00m\u001b[38;5;124m] are in the [\u001b[39m\u001b[38;5;132;01m{\u001b[39;00maxis_name\u001b[38;5;132;01m}\u001b[39;00m\u001b[38;5;124m]\u001b[39m\u001b[38;5;124m\"\u001b[39m)\n\u001b[0;32m   6178\u001b[0m not_found \u001b[38;5;241m=\u001b[39m \u001b[38;5;28mlist\u001b[39m(ensure_index(key)[missing_mask\u001b[38;5;241m.\u001b[39mnonzero()[\u001b[38;5;241m0\u001b[39m]]\u001b[38;5;241m.\u001b[39munique())\n\u001b[1;32m-> 6179\u001b[0m \u001b[38;5;28;01mraise\u001b[39;00m \u001b[38;5;167;01mKeyError\u001b[39;00m(\u001b[38;5;124mf\u001b[39m\u001b[38;5;124m\"\u001b[39m\u001b[38;5;132;01m{\u001b[39;00mnot_found\u001b[38;5;132;01m}\u001b[39;00m\u001b[38;5;124m not in index\u001b[39m\u001b[38;5;124m\"\u001b[39m)\n",
-      "\u001b[1;31mKeyError\u001b[0m: \"['Revenue'] not in index\""
-     ]
     }
    ],
    "source": [
@@ -2887,43 +2881,40 @@
     "sales_data.set_index('Date', inplace=True)\n",
     "\n",
     "# Select \"Sales\" column and display values\n",
-    "print(sales_data['Sales'])\n",
+    "print(f\"Sales: \\n {sales_data['Sales']}\")\n",
     "\n",
     "# Select \"Sales\" and \"Region\" columns and display resulting DataFrame\n",
-    "print(sales_data[['Sales', 'Region']])\n",
+    "print(f\"Sales with Ragion: \\n {sales_data[['Sales', 'Region']]}\")\n",
     "\n",
     "# Select subset of rows where \"Sales\" value is greater than 1000\n",
-    "print(sales_data[sales_data['Sales'] > 1000])\n",
+    "print(f\"Filtering Sales: \\n {sales_data[sales_data['Sales'] > 1000]}\")\n",
     "\n",
     "# Select subset of rows and columns using .iloc method\n",
-    "print(sales_data.iloc[0:5, 0:2])\n",
+    "print(f\"Subdf: \\n {sales_data.iloc[0:5, 0:2]}\")\n",
     "\n",
     "# Group data by \"Region\" column and calculate mean sales\n",
-    "print(sales_data.groupby('Region')['Sales'].mean())\n",
+    "print(f\"Groupby region: \\n  {sales_data.groupby('Region')['Sales'].mean()}\")\n",
     "\n",
     "# Group data by multiple columns (\"Region\" and \"Product\") and calculate sum of sales\n",
-    "print(sales_data.groupby(['Region', 'Product'])['Sales'].sum())\n",
+    "print(f\"Region and Rroduct: \\n {sales_data.groupby(['Region', 'Product'])['Sales'].sum()}\")\n",
     "\n",
     "# Use agg method to apply multiple aggregation functions to grouped data\n",
-    "print(sales_data.groupby('Region').agg({'Sales': ['mean', 'sum']}))\n",
+    "print(f\"Mean and sum of region: \\n {sales_data.groupby('Region').agg({'Sales': ['mean', 'sum']})}\")\n",
     "\n",
     "# Calculate size of each group\n",
-    "print(sales_data.groupby('Region').size())\n",
+    "print(f\"Size of Region: \\n {sales_data.groupby('Region').size()}\")\n",
     "\n",
     "# Select rows based on multiple conditions\n",
-    "print(sales_data[(sales_data['Sales'] > 1000) & (sales_data['Region'] == 'North')])\n",
+    "print(\"FIltering Data: \\n {sales_data[(sales_data['Sales'] > 1000) & (sales_data['Region'] == 'North')]}\")\n",
     "\n",
     "# Use query method to filter rows\n",
     "print(sales_data.query('Sales > 1000 and Region == \"North\"'))\n",
     "\n",
     "# Use isin to filter rows based on list of values\n",
-    "print(sales_data[sales_data['Product'].isin(['ProductA', 'ProductB'])])\n",
+    "print(f\"Using isin: \\n {sales_data[sales_data['Product'].isin(['ProductA', 'ProductB'])]}\")\n",
     "\n",
     "# Select specific columns and rename them\n",
-    "print(sales_data.rename(columns={'Sales': 'Revenue'})[['Revenue', 'Region']])\n",
-    "\n",
-    "# Rearrange columns to display data in more meaningful way\n",
-    "print(sales_data[['Region', 'Product', 'Revenue']])"
+    "print(sales_data.rename(columns={'Sales': 'Revenue'})[['Revenue', 'Region']])"
    ]
   }
  ],
