Mini Project Added and Task 15 Updated

--- a/Task 15/Task 15.ipynb
+++ b/Task 15/Task 15.ipynb
@@ -13,7 +13,7 @@
    "id": "11714c6d-e6dc-4632-8f72-992483f1e26c",
    "metadata": {},
    "source": [
-    "Importing the required Libraries"
+    "##### Importing the required Libraries"
    ]
   },
   {
@@ -798,20 +798,106 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "d41019d6-14ee-4808-bc50-8689c25dd20e",
+   "cell_type": "markdown",
+   "id": "30b81c6d-ec63-4342-83f1-27c891943944",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "# 7. Reshape data using the melt function to go from wide to long format."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "f9e98c96-dad3-4557-8dfc-123a5265a7a7",
+   "metadata": {},
+   "source": [
+    "## Using the `melt` function in Pandas\n",
+    "\n",
+    "The `melt` function in Pandas is used to reshape data from a wide format to a long format. It \"melts\" columns into rows, allowing for easier data manipulation and analysis."
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
+   "id": "d41019d6-14ee-4808-bc50-8689c25dd20e",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "   ID   A    B     C\n",
+      "0   1  10  100  1000\n",
+      "1   2  20  200  2000\n",
+      "2   3  30  300  3000 \n",
+      "\n",
+      "   ID variable  value\n",
+      "0   1        A     10\n",
+      "1   2        A     20\n",
+      "2   3        A     30\n",
+      "3   1        B    100\n",
+      "4   2        B    200\n",
+      "5   3        B    300\n",
+      "6   1        C   1000\n",
+      "7   2        C   2000\n",
+      "8   3        C   3000\n"
+     ]
+    }
+   ],
+   "source": [
+    "data = {'ID': [1, 2, 3], \n",
+    "        'A': [10, 20, 30], \n",
+    "        'B': [100, 200, 300], \n",
+    "        'C': [1000, 2000, 3000]}\n",
+    "\n",
+    "df = pd.DataFrame(data)\n",
+    "\n",
+    "# Reshape from wide to long format using melt\n",
+    "df_long = pd.melt(df, id_vars='ID', value_vars=['A', 'B', 'C'])\n",
+    "print(df,\"\\n\")\n",
+    "print(df_long)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "3adb53f1-9224-4ef7-83d9-6afb91e2b76a",
+   "metadata": {},
+   "source": [
+    "# 8. Create a pivot table to summarize data."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "2d78cafa-c0e5-4d73-877f-b0725df73f6a",
+   "metadata": {},
+   "source": [
+    "### Using the `pivot_table` function in Pandas\n",
+    "\n",
+    "The `pivot_table` function in Pandas is used to summarize and aggregate data. It creates a spreadsheet-like table, allowing for easy analysis and visualization of data. In this example, we'll use it to summarize the reshaped data and show the values for each variable (A, B, C) for each ID."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
    "id": "c4f18045-0d48-4807-b2be-5c1bbe3efca0",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "variable     A      B       C\n",
+      "ID                           \n",
+      "1         10.0  100.0  1000.0\n",
+      "2         20.0  200.0  2000.0\n",
+      "3         30.0  300.0  3000.0\n"
+     ]
+    }
+   ],
+   "source": [
+    "pivot = pd.pivot_table(df_long, index='ID', columns='variable', values='value')\n",
+    "\n",
+    "print(pivot)"
+   ]
   },
   {
    "cell_type": "markdown",
