--- a/Month 02/Task 23/Linear Regression from scratch.ipynb
+++ b/Month 02/Task 23/Linear Regression from scratch.ipynb
@@ -643,7 +643,7 @@
     "$$J(w,b) = \\frac{1}{2m} \\sum\\limits_{i = 0}^{m-1} (f_{w,b}(x^{(i)}) - y^{(i)})^2\\tag{2}$$\n",
     "![Local](images/grad.png) \n",
     "</br>\n",
-    "![Local]('images/grad2.png)"
+    "![Local](images/grad2.png)"
    ]
   },
   {
