--- a/Month 02/Task 30/Some preprocessing Using scikit-learn.ipynb
+++ b/Month 02/Task 30/Some preprocessing Using scikit-learn.ipynb
@@ -1,6 +1,14 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "id": "86070f29-c027-4070-84b9-93d53b24ac61",
+   "metadata": {},
+   "source": [
+    "# Import Dependencies"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 284,
    "id": "8e442739-c712-4794-a8df-b6b32ccff598",
@@ -4060,6 +4068,27 @@
    "metadata": {},
    "source": [
     "**STEP 07** : Hyperparameter Tuning"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "de515d72-ba6a-41e5-9616-1415c468b500",
+   "metadata": {},
+   "source": [
+    "The practice of optimising a machine learning model's hyperparameters in order to boost its performance is known as hyperparameter tuning. Hyperparameters are predetermined and govern some parts of the model training process, in contrast to model parameters, which are determined by the data. The learning rate in neural network training, tree depth in decision tree models, and regularisation strength in linear models are a few examples."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "5e9f6e0c-f410-40c2-9af0-bee055521074",
+   "metadata": {},
+   "source": [
+    "## Key Concepts\n",
+    "### Hyperparameters vs. Parameters:\n",
+    "\n",
+    "**Hyperparameters** : Values set before training begins, such as the number of trees in a random forest, the learning rate, or the number of hidden layers in a neural network.\n",
+    "**Parameters** : Values learned during training, such as weights in a neural network or coefficients in a linear regression.\n",
+    "**Grid Search**: A method to exhaustively search through a specified subset of hyperparameters. It trains and evaluates the model for each combination of hyperparameter values."
    ]
   },
   {
